2005-12-01  Jonathan Pryor  <jonpryor@vt.edu>

	* configure.in: Check for setkey(3) in -lcrypt and define CRYPT_LIBS
	  accordingly.

2005-12-01 Mike Kestner <mkestner@novell.com>

	* scripts/mono-find-provides.in: support policy assemblies.

2005-11-29 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: define PLATFORM_MACOSX.

2005-11-24  Dick Porter  <dick@ximian.com>

	* configure.in: Test for GetProcessId() on windows

2005-11-21  Raja R Harinath  <rharinath@novell.com>

	* scripts/Makefile.am (bin_SCRIPTS): Move 'gmcs' to ...
	(scripts_2_0): ... here.
	(gmcs): Remove special-case rule.

2005-11-09 Michael Hutchinson <m.j.hutchinson@gmail.com>

	* data/net_1_1/machine.config, data/net_2_0/machine.config: Set 
	default values for http proxy

2005-11-07  Zoltan Varga  <vargaz@gmail.com>

	* docs/jit-regalloc: Merge forgotten documentation updates from
	the mini-xp-local-regalloc branch.

2005-10-28  Wade Berrier <wberrier@novell.com>

	* mono.pc.in, mint.pc.in, configure.in: Make these relocatable.
	* scripts: Makefile.am mono-nunit.pc.in script.in mono-service.in 
	Make all the wrappers relocatable.

2005-10-21  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add test for execinfo.h.

2005-10-20  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (DISTCHECK_CONFIGURE_FLAGS): New.  Make 'distcheck'
	compile with the 'monolite' in the distribution tarball.
	(compiler-tests-net_2_0): Avoid deleting
	$(mcs_topdir)/build/common/Consts.cs.

2005-10-20  Robert Jordan  <robertj@gmx.net>

	* data/net_2_0/machine.config: Added IPC channel templates.

2005-10-11  John Luke  <john.luke@gmail.com>

	* man/monop.1: update for new monop options
	
2005-10-04  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Fix up problems with the latest libtool on win32.

2005-10-04  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Remove 'Globalization:' entry from final message.

2005-09-27  Raja R Harinath  <rharinath@novell.com>
