@@ -9,7 +9,7 @@ DIST_SUBDIRS = libgc mono ikvm-native support docs data runtime scripts man samp
 
 vs_files = genmdesc.vcproj libmono.vcproj mono.vcproj mono.sln
 
-EXTRA_DIST= mono.pc.in mint.pc.in mono-uninstalled.pc.in dotnet.pc.in $(vs_files)
+EXTRA_DIST= mono.pc.in mint.pc.in mono-uninstalled.pc.in dotnet.pc.in mono-cairo.pc.in $(vs_files)
 
 DISTCHECK_CONFIGURE_FLAGS = EXTERNAL_MCS=false EXTERNAL_RUNTIME=false
 
@@ -20,12 +20,12 @@ dist-hook:
 
 pkgconfigdir = $(libdir)/pkgconfig
 if JIT_SUPPORTED
-pkgconfig_DATA= mono.pc mint.pc dotnet.pc
+pkgconfig_DATA= mono.pc mint.pc dotnet.pc mono-cairo.pc
 else
-pkgconfig_DATA= mint.pc
+pkgconfig_DATA= mint.pc mono-cairo.pc
 endif
 noinst_DATA = mono-uninstalled.pc
-DISTCLEANFILES= mono.pc mint.pc mono-uninstalled.pc dotnet.pc
+DISTCLEANFILES= mono.pc mint.pc mono-uninstalled.pc dotnet.pc mono-cairo.pc
 
 .PHONY: get-monolite-latest mcs-do-compiler-tests compiler-tests bootstrap-world
 
